Fix contrast errors

--- a/css/index.css
+++ b/css/index.css
@@ -1018,7 +1018,7 @@ video {
 
 /*** Tag styling ***/
 a.tag {
-  color: #1da1f2;
+  color: #01274e;
   font-family: "Futura", Helvetica, Arial, sans-serif;
   font-size: 1.5rem;
   font-weight: 600;
